--- a/front/src/components/Home/styles.scss
+++ b/front/src/components/Home/styles.scss
@@ -8,9 +8,10 @@
       background-position: bottom;
       background-size: 100% auto;
       padding: 8rem 0 13rem 0;
+      box-shadow: 0px 22px 0px 0px rgba(143,226,255,1);
     }
     &:nth-of-type(2n) {
-      background: rgba(5, 106, 147, 0.32);
+      background: rgba(143, 226, 255, 1);
       padding: 2rem 0;
     }
     &:nth-of-type(3) {
@@ -19,6 +20,7 @@
       background-position: top;
       background-size: 100% auto;
       padding-top: 13rem;
+      box-shadow: 0px -22px 0px 0px rgba(143,226,255,1);
     }
     /* odd articles (1, 3, 5) should be with white bg 
     * + slightly shifted to left 
@@ -38,7 +40,7 @@
       display: flex;
       margin: 0 24% 0 auto;
       max-width: 980px;
-      justify-content: space-between;
+      justify-content: space-around;
       align-items: center;
       line-height: 1.4rem;
 
@@ -75,26 +77,25 @@
   }
 
   @media screen and (max-width: 60rem) {
-    /*
-    * Mobile, articles are below each other with no shift.
-    * Images are displayed above each article
-    */
     background-image: url("src/assets/img/wave.svg");
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: auto 5%;
     &__article {
       &:nth-of-type(1) {
-        background-size: auto 5%;
-        padding-bottom: 7rem;
+        background-repeat: no-repeat;
+        background-position: bottom;
+        background-size: 100% auto;
+        padding: 2rem 0 13rem 0;
       }
       &:nth-of-type(2n) {
-        background: rgba(5, 106, 147, 0.32);
         padding: 2rem 0;
       }
       &:nth-of-type(3) {
-        background-size: auto 5%;
-        padding: 7rem 0;
+        background-repeat: no-repeat;
+        background-position: top;
+        background-size: 100% auto;
+        padding-top: 13rem;
       }
       &:nth-of-type(2n + 1) {
         div.home-wrapper__article__wrapper {
